# fractals

./: .gitignore  CMakeLists.txt  LICENSE  README.md
experimentum/modes/fractal_mode/renderers/julia/: julia_renderer.cpp
experimentum_modes/mode_api/: CMakeLists.txt
experimentum_modes/mode_api/include/: mode_info.h
fractals/: CMakeLists.txt  main.cpp  window.cpp  window.h
fractals/generators/: generator.h  mandelbrot_generator.cpp  mandelbrot_generator.h
fractals/graphics/: color.cpp  color.h
fractals/graphics/impl/: qt_image_impl.cpp
fractals/input_args/: input_args.cpp  input_args.h
fractals/modes/: fractal_mode.cpp  fractal_mode.h  mode.cpp  mode.h  renderer.cpp  renderer.h
fractals/modes/fractal_mode/: fractal_mode.cpp  fractal_mode.h
fractals/modes/fractal_mode/renderers/: fractal_renderer.cpp  fractal_renderer.h
fractals/modes/fractal_mode/renderers/julia/: julia_renderer.h
fractals/modes/fractal_mode/renderers/mandelbrot/: mandelbrot_renderer.cpp  mandelbrot_renderer.h
fractals/renderers/: mandelbrot_renderer.cpp  mandelbrot_renderer.h  renderer.cpp  renderer.h
fractals/renderers/julia/: julia_renderer.h
fractals/renderers/mandelbrot/: mandelbrot_renderer.cpp  mandelbrot_renderer.h
fractals/shaders/: base.frag  base.vert  julia.frag  mandelbrot.frag  mandelbrot.vert
fractals/ui/: gl_widget.cpp  gl_widget.h  window.cpp  window.h
fractals/ui/modes/: fractal_mode_window.cpp  fractal_mode_window.h
fractals/utils/: file_loader.cpp  file_loader.h
lib/SFML/: libsfml-audio.so.2.3.2  libsfml-graphics.so.2.3.2  libsfml-network.so.2.3.2  libsfml-system.so.2.3.2  libsfml-window.so.2.3.2
qttest/: CMakeLists.txt  main.cpp
simple_lib/: main.cpp
src/: CMakeLists.txt
src/experimentum/: CMakeLists.txt  main.cpp
src/experimentum/graphics/: image.h
src/experimentum/graphics/impl/: qt_image_impl.h
src/experimentum/modes/: mode.h  renderer.h
src/experimentum/modes/fractal_mode/: fractal_mode.cpp
src/experimentum/modes/fractal_mode/renderers/julia/: julia_renderer.h
src/experimentum/modes/fractal_mode/renderers/mandelbrot/: mandelbrot_renderer.cpp
src/experimentum/modes/loader/: modes_loader.cpp  modes_loader.h
src/experimentum/shaders/: julia.frag  mandelbrot.frag
src/experimentum/ui/: window.cpp  window.h
src/experimentum/utils/: file_loader.h
src/experimentum_modes/: CMakeLists.txt
src/experimentum_modes/mode_api/: CMakeLists.txt
src/experimentum_modes/mode_api/include/: menu.h  mode_info.h
src/experimentum_modes/mode_api/src/: menu.cpp
src/experimentum_modes/voronoi_map_mode/: CMakeLists.txt  base_file.cpp
src/qttest/: CMakeLists.txt  common_class.h  main.cpp
src/simple_lib/: CMakeLists.txt  main.cpp
