cmake_minimum_required(VERSION 2.8.12.2)

set(ENV{WORKSPACE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_CXX_FLAGS "-std=c++14 -Wall ${CMAKE_CXX_FLAGS}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY $ENV{WORKSPACE_DIR}/artifacts)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $ENV{WORKSPACE_DIR}/artifacts)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY $ENV{WORKSPACE_DIR}/artifacts)

add_subdirectory(src)
